# MysteriesOfCode

./: Cargo.toml  HomeTemplate.html  README.md  linux_runner.sh
.sqlx/: query-d402a2faf43b5d7be51e73f78bf1afaf42e812d80f954fad0ffc5735f1149a29.json
assets/: style.css  theme.css
assets/sass/: main.css  main.css.map
assets/sass/bulma/: bulma.css.map
assets/sass/bulma/css/: bulma-rtl.css.map  bulma-rtl.min.css.map  bulma.css.map  bulma.min.css.map
assets/sass/bulma/sass/base/: animations.css.map  generic.css.map  minireset.css.map
assets/sass/bulma/sass/components/: card.css.map  dropdown.css.map  media.css.map  menu.css.map  panel.css.map
assets/sass/bulma/sass/elements/: container.css.map  tag.css.map
assets/sass/bulma/sass/grid/: columns.css.map  tiles.css.map
assets/sass/bulma/sass/helpers/: color.css.map  flexbox.css.map  float.css.map  overflow.css.map  spacing.css.map  typography.css.map  visibility.css.map
assets/sass/bulma/sass/layout/: footer.css.map  section.css.map
parsed_articles/: example.md
res/: tasks.json  tasksb.json
res/articles/: example.md
sass/: main.scss
src/: handlers.rs  login.rs  main.rs  tasks.rs  templates.rs
templates/: F04.html  hiHTMX.html  home.html  login copy.html  login.html  main.html
