[package]
name = "mysteries_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum", "markdown", "serde", "serde-json", "with-hyper"] }
askama_axum = "0.4.0"
askama_hyper = "0.1.0"
axum = "0.7.1"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.4", features = ["serde"] }
fs = "0.0.5"
hyper = "1.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres"]}
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
